--- a/.env-dist
+++ b/.env-dist
@@ -1,6 +1,6 @@
 # a comment and that will be ignored.
-MONGODB_ADDRESS="mongodb://test1:passwd@192.168.1.7:27017/"
-DB = tvh5
+MONGODB_ADDRESS="mongodb://test1:passwd@127.0.0.1:27017/"
+DB = test
 COLLECTION = proxy
 LIMIT_PROXY=400
 
